--- a/index.html
+++ b/index.html
@@ -59,5 +59,9 @@
       </section>
     </main>
   </div>
+
+  <footer>
+    Feito com <img src="assets/heath.svg" alt="Um coraçao"> pela Rocketseat
+  </footer>
 </body>
 </html>
